Fix squashed buttons on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -229,7 +229,7 @@ li:last-child > .label {
 
   .button {
     flex: 1;
-    padding: 24px 36px;
+    padding: 24px 0;
   }
 
   .sublocation-container {
